tests/fail/elaboration/duplicate-field-labels/record-pattern.fathom
//~ exit-code = 1

let {x, y, x} = {x = false, y = true};
{}